adicionei mais mq para maior responsividade, menos a de celular

--- a/telag-m.css
+++ b/telag-m.css
@@ -21,7 +21,7 @@
 
 }
 
-/*segunda tela */
+/*segunda tela g-m */
 
 @media screen and (min-width:1136px) and (max-width:1209px) {
     header{font-family: 'F1', Arial, Helvetica, sans-serif;
