--- a/telap-m.css
+++ b/telap-m.css
@@ -21,10 +21,9 @@
 
 }
 
-/*primeira tela g*/
+/*quarta tela. tela p-m */
 
-@media screen and (min-width:1210px) and (max-width:1280px){
-    
+@media screen and (min-width:768px) and (max-width:993px) {
     header{font-family: 'F1', Arial, Helvetica, sans-serif;
         background-color: rgba(255, 255, 255, 0.87);
         height: 15vh;
@@ -33,25 +32,27 @@
         border-bottom: 1px solid black;
     }
     
-    div#logo{
+    div#logo{width: 100px;
             height: 89px;
     
     }
     
-    div#logo > img{width: 180px;
-                height: 90px;
-                padding-left: 10px;
+    div#logo > img{width: 130px;
+                height: 80px;
+                padding-left: 2px;
     
     }
     
-    header menu > ul > li{list-style-type: none;
+    header > menu > ul > li{list-style-type: none;
                     display: inline-block;
-                    margin-right: 25px;
+                    margin-right: 0px;
                     color: #EE2A26;
-                    margin-left: 50px;
+                    margin-left: 0px;
                     margin-top: 50px;
-                    font-size: 0.9em;
+                    font-size: 0.75em;
                     transition: 0.5s;
+                    border: 1px solid black;
+                    border-radius: 10px;
     
     }
     
@@ -64,7 +65,7 @@
 
     header > menu > ul > li >a{text-decoration: none;
         color: #EE2A26 ;
-
+        padding: 3px;
     }
     
     input{height: 30px;
@@ -73,7 +74,7 @@
         border: 1px solid #EE2A26;
         border-radius: 0px 20px 0px 0px;
         background-color: rgba(128, 128, 128, 0.432);
-        margin-left: 25px ;
+        margin-left: 12px ;
     
     }
 
@@ -81,11 +82,11 @@
 
     }
 
-    main{background-image: url(img/f1l6.jpeg);
-        height: 75vh;
+    main{background-image: url(img/f1l.jpeg);
+        height: 76.5vh;
         width: 100vw;
         background-size: cover;
-        background-position: center center;
+        background-position: center;
         
 
     }
@@ -100,15 +101,14 @@
     }
 
     main > div#f1m > h1{font-family: 'F1R', Arial, Helvetica, sans-serif;
-        color: white;
-        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.699);
+        color: #EE2A26;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.87);
         margin-bottom: 10px;
 
     }
 
     main > div#f1m > p{font-family: 'F1R', Arial, Helvetica, sans-serif;
-        color: white;
-        background-color: #EE2A26;
+        background-color: white;
         padding: 20px 10px 20px 10px ;
         border-radius: 40px 8px 8px 30px;
         transition: 0.8s;
@@ -120,21 +120,24 @@
 
     }
 
-    main > div#f1m > p > a{color: white;
+    main > div#f1m > p > a{color: #EE2A26;
         text-decoration: none;
+        text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.747);
 
     }
 
     footer{background-color: #1e1e24;
-        height: 10vh;
+        height: 8.5vh;
         box-shadow: 1px 1px 10px black;
         font-family: 'F1R', Arial, Helvetica, sans-serif;
         color: #EE2A26;
+        font-size: 0.8em;
 
     }
 
     div#h{background-color: #1e1e24;
             width: 200px;
+            height: 100%;
             border-right: 1px solid white;
             display: inline-block;
 
